--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "dev": "nodemon -L index.js"
   },
   "keywords": [],
@@ -11,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "pg": "^8.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
